# tsify-leak-repro

./: .gitignore  Cargo.toml  README.md  index.js  repro.sh
src/: lib.rs
